Add modal responsive styling

--- a/src/components/toolbar/Toolbar.css
+++ b/src/components/toolbar/Toolbar.css
@@ -17,3 +17,46 @@
 .toolbar-container > .toolbar-button:last-child {
   border-bottom: none;
 }
+
+.modal__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal__collection-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+  margin-bottom: .2rem;
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+
+.modal__collection-item:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.selected {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (max-width: 600px) {
+  .modal__header {
+    flex-direction: column;
+    text-align: center; /* h2 */
+    padding-bottom: 1rem;
+    font-size: 1.2rem;
+  }
+
+  button {
+    font-size: 1.2rem;
+  }
+
+  .modal__collection-item {
+    flex-direction: column;
+    text-align: center;
+    font-size: 1rem;
+  }
+}
