--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -2,3 +2,10 @@
   width: 100vw;
   height: 100vh;
 }
+
+.color-picker {
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+  z-index: 1001;
+}
