--- a/src/components/CollectionController/Modal/Modal.css
+++ b/src/components/CollectionController/Modal/Modal.css
@@ -4,22 +4,18 @@
   align-items: center;
 }
 
-.modal__collection-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.5rem;
-  margin-bottom: 0.2rem;
-  cursor: pointer;
-  font-size: 1.2rem;
+.modal__close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
-.modal__collection-item:hover {
-  background-color: rgba(0, 0, 0, 0.2);
+.modal__close-button:hover {
+  color: salmon;
 }
 
-.selected {
-  background-color: rgba(0, 0, 0, 0.1);
+.modal__button {
+  background-color: slategrey;
 }
 
 @media screen and (max-width: 600px) {
