--- a/src/components/CollectionController/Modal/Modal.css
+++ b/src/components/CollectionController/Modal/Modal.css
@@ -1,6 +1,29 @@
-.modal__header {
+.modal__content {
+  position: absolute;
+  inset: 5% 10%;
+  border: 1px solid rgb(204, 204, 204);
+  background: rgb(255, 255, 255);
+  overflow: auto;
+  border-radius: 4px;
+  outline: none;
+  padding: 20px;
+}
+
+header {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+main {
+  overflow: auto;
+  border-radius: 0.15em;
+  box-shadow: 0 0 0 0.1em rgba(0, 0, 0, 0.14);
+}
+
+footer {
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -15,24 +38,54 @@
 }
 
 .modal__button {
-  background-color: slategrey;
+  background-color: #3369ff;
+  border: none;
+  border-radius: 0.15em;
+  box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
+  box-sizing: border-box;
+  color: white;
+  font-family: inherit;
+  font-size: 1.2em;
+  padding: 0.7em 1.4em;
+  text-align: center;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.modal__button:hover {
+  background-color: #094bff;
+  box-shadow: 0 0 0.15em 0.15em rgba(0, 0, 0, 0.34);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
-  .modal__header {
-    flex-direction: column;
-    text-align: center; /* h2 */
-    padding-bottom: 1rem;
+  header {
+    place-self: center;
+    text-align: center;
     font-size: 1.2rem;
   }
 
   button {
     font-size: 1.2rem;
   }
+}
 
-  .modal__collection-item {
-    flex-direction: column;
-    text-align: center;
-    font-size: 1rem;
+@media screen and (max-width: 468px) {
+  .modal__content {
+    grid-template-rows: 20% 55% 20%;
+  }
+
+  header {
+    font-size: 1em;
+  }
+
+  main {
+    font-size: 0.8em;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .modal__content {
+    inset: 5px;
   }
 }
