--- a/src/components/CollectionController/Modal/Modal.css
+++ b/src/components/CollectionController/Modal/Modal.css
@@ -9,16 +9,14 @@
   padding: 20px;
 }
 
+h2 {
+  margin: 0;
+}
+
 header {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-}
-
-main {
-  overflow: auto;
-  border-radius: 0.15em;
-  box-shadow: 0 0 0 0.1em rgba(0, 0, 0, 0.14);
 }
 
 footer {
@@ -54,7 +52,7 @@ footer {
 
 .modal__button:hover {
   background-color: #094bff;
-  box-shadow: 0 0 0.15em 0.15em rgba(0, 0, 0, 0.34);
+  box-shadow: 0 0 0.1em 0.07em rgba(0, 0, 0, 0.34);
   cursor: pointer;
 }
 
@@ -70,6 +68,12 @@ footer {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .modal__content {
+    inset: 5px;
+  }
+}
+
 @media screen and (max-width: 468px) {
   .modal__content {
     grid-template-rows: 20% 55% 20%;
@@ -82,10 +86,8 @@ footer {
   main {
     font-size: 0.8em;
   }
-}
 
-@media screen and (max-width: 768px) {
-  .modal__content {
-    inset: 5px;
+  footer {
+    flex-direction: column;
   }
 }
